# LunaFileTransfer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
msvc/: LunaFileTransfer.sln  LunaFileTransfer.vcxproj  LunaFileTransfer.vcxproj.filters
src/LunaFileTransfer/: CMakeLists.txt  FileReceivingClient.cpp  FileReceivingClient.h  FileSendingClient.cpp  FileSendingClient.h  LunaFileTransfer.cpp
src/LunaFileTransferServer/: CMakeLists.txt  FileReceiver.cpp  FileReceiver.h  FileSender.cpp  FileSender.h  FileTransferSessionInfo.cpp  FileTransferSessionInfo.h  LunaFileTransferServer.cpp
